--- a/gb/23/1/4/n13899355.md
+++ b/gb/23/1/4/n13899355.md
@@ -1,70 +1,60 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>林经甫医师三力运动 为乐龄勇壮城注入活力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13899356-593978-600x400.jpg" />
 <h6>全员大合照。（李撷璎／大纪元）
 </h6>
 <hr>
-<p>【大纪元2023年01月04日讯】（大纪元记者李撷璎台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89.md#1">嘉义</a>报导）嘉市积极推动“乐龄勇壮城”，4日上午于国立嘉义大学新民校区举办“时尚老人on air”成果发表会。除了时尚长者接受训练，运用新媒体所制作的成果发表之外，后半段林经甫医师演讲所提三力运动，为乐龄勇壮城注入新的活力。</p>
-<p>鼓励橘世代开创乐龄新生，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%98%89%E4%B9%89.md#1">嘉义</a>市政府卫生局与智邦公益馆111年起共同合作“阿公阿嬷分享不NG”计划，邀请5组平均年龄72岁的长者一同运用新媒体Podcast录制有声绘本，今日上午于嘉大新民校区B栋4楼举办“时尚老人on air”成果发表会。</p>
+<p>【大纪元2023年01月04日讯】（大纪元记者李撷璎台湾嘉义报导）嘉市积极推动“乐龄勇壮城”，4日上午于国立嘉义大学新民校区举办“时尚老人on air”成果发表会。除了时尚长者接受训练，运用新媒体所制作的成果发表之外，后半段林经甫医师演讲所提三力运动，为乐龄勇壮城注入新的活力。</p>
+<p>鼓励橘世代开创乐龄新生，嘉义市政府卫生局与智邦公益馆111年起共同合作“阿公阿嬷分享不NG”计划，邀请5组平均年龄72岁的长者一同运用新媒体Podcast录制有声绘本，今日上午于嘉大新民校区B栋4楼举办“时尚老人on air”成果发表会。</p>
 <p>邀请“播客学员”们分享以健康、环保为主题，编制生活化且具教育意义的有声故事。同场也邀请“时尚老人”林经甫医师分享健康老化三力的理念，为嘉义市“乐龄勇壮城”带来多元知识及能量。</p>
-<p>卫生局局长廖育玮表示，因应2025年“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B6%85%E9%AB%98%E9%BE%84%E7%A4%BE%E4%BC%9A.md#1">超高龄社会</a>”的来临，嘉义市积极推行十大旗舰计划-“乐龄勇壮城”，结合嘉义市丰沛医疗资源基础，透过鼓励橘世代乐龄圆梦，打破过去大众认为高龄人口是衰老、落伍或是需要被照顾的刻板印象，继而展现长者健康、活力充沛的一面。</p>
-<figure id="attachment_13899362" aria-describedby="caption-attachment-13899362" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13899362-593983.jpg"><img class="size-medium wp-image-13899362" src="https://i.epochtimes.com/assets/uploads/2023/01/id13899362-593983-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-13899362" class="wp-caption-text">第一组学员当起播客，分享完逗趣绘本视力保健之后开心合照。（李撷璎／大纪元）</figcaption></figure>
+<p>卫生局局长廖育玮表示，因应2025年“超高龄社会”的来临，嘉义市积极推行十大旗舰计划-“乐龄勇壮城”，结合嘉义市丰沛医疗资源基础，透过鼓励橘世代乐龄圆梦，打破过去大众认为高龄人口是衰老、落伍或是需要被照顾的刻板印象，继而展现长者健康、活力充沛的一面。</p>
+<figure id="attachment_13899362" aria-describedby="caption-attachment-13899362" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13899362-593983.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-13899362" src="https://i.epochtimes.com/assets/uploads/2023/01/id13899362-593983-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-13899362" class="wp-caption-text">第一组学员当起播客，分享完逗趣绘本视力保健之后开心合照。（李撷璎／大纪元）</figcaption></figure>
 <p>廖局长大赞今日演出的18位长者参与111年度卫生局与智邦公益馆合作“阿公阿嬷分享不NG”计划，在地表演艺术剧团、社会企业及心理咨商等跨领域资源引导下，运用了时下最夯的新媒体Podcast，在故事中融入自身丰富的生命阅历，也透过熟悉的语言为故事创造不一样的生命价值。廖局长邀请所有听众一同收听，带给长辈更多的支持。</p>
 <p>本日参与演出的18位“播客”平均年龄达72岁，从111年4月起经过一连串的肢体开发、说故事训练，以及节目企划的实作练习，原本对于Podcast完全陌生甚至害怕接触新事物的长辈，也完成人生中第一个Podcast作品。</p>
-<figure id="attachment_13899363" aria-describedby="caption-attachment-13899363" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13899363-593984.jpg"><img class="size-medium wp-image-13899363" src="https://i.epochtimes.com/assets/uploads/2023/01/id13899363-593984-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-13899363" class="wp-caption-text">第二组学员当起播客，分享逗趣绘本谈<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>，相当有趣的对答谈失智，让人忍不住想关心一下，失智症到底是怎么回事。（李撷璎／大纪元）</figcaption></figure>
-<p>作品包含“迷路转转转-如果你迷路<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%B1%E6%99%BA%E7%97%87.md#1">失智症</a>）”、“爷爷的迷宫-来自遗忘星球（失智症）”、“快乐说故事-大恐龙戴眼镜（视力保健）”、“台湾的海-小海龟的逆袭（环保）”、“柴契尔夫人游桃城-做伙来去踅东市（观光）”等5组作品，即日起于spotify、Apple 跟google平台皆可免费收听。由四位家庭主妇组成的“桃城辣妈F4”表示，“刚开始真的很紧张，慢慢彼此认识后，共同合作讨论完成作品，真的很有成就感。”</p>
-<figure id="attachment_13899361" aria-describedby="caption-attachment-13899361" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13899361-593982.jpg"><img class="size-medium wp-image-13899361" src="https://i.epochtimes.com/assets/uploads/2023/01/id13899361-593982-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-13899361" class="wp-caption-text">卫生局局长廖育玮颁感谢状予林经甫医师（右）。（李撷璎／大纪元）</figcaption></figure>
+<figure id="attachment_13899363" aria-describedby="caption-attachment-13899363" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13899363-593984.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-13899363" src="https://i.epochtimes.com/assets/uploads/2023/01/id13899363-593984-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-13899363" class="wp-caption-text">第二组学员当起播客，分享逗趣绘本谈失智症，相当有趣的对答谈失智，让人忍不住想关心一下，失智症到底是怎么回事。（李撷璎／大纪元）</figcaption></figure>
+<p>作品包含“迷路转转转-如果你迷路（失智症）”、“爷爷的迷宫-来自遗忘星球（失智症）”、“快乐说故事-大恐龙戴眼镜（视力保健）”、“台湾的海-小海龟的逆袭（环保）”、“柴契尔夫人游桃城-做伙来去踅东市（观光）”等5组作品，即日起于spotify、Apple 跟google平台皆可免费收听。由四位家庭主妇组成的“桃城辣妈F4”表示，“刚开始真的很紧张，慢慢彼此认识后，共同合作讨论完成作品，真的很有成就感。”</p>
+<figure id="attachment_13899361" aria-describedby="caption-attachment-13899361" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13899361-593982.jpg"><img loading="lazy" decoding="async" class="size-medium wp-image-13899361" src="https://i.epochtimes.com/assets/uploads/2023/01/id13899361-593982-450x300.jpg" alt="" width="450" b="300" /></a><figcaption id="caption-attachment-13899361" class="wp-caption-text">卫生局局长廖育玮颁感谢状予林经甫医师（右）。（李撷璎／大纪元）</figcaption></figure>
 <p>促成这一桩美事的背后动力，即是时尚老人林经甫医师的“三力”精神。透过智邦公益馆李奇颖执行长的居中媒合，向嘉义民众分享他的第三人生哲学。人生上半场过得丰富精彩的林医师，见证过无数生死，母亲虽然活到104岁，但最后的10年是需要被照顾的，林医师经历照顾卧床10年母亲的切身之痛，让他意识到预防老年症候群、延长健康余命的重要性。</p>
 <p>2017年他当起YouTuber，用自己的例子想打破大众对于“老”的框架，带出预防老化的观念与方法，提出以脑力、体力、社会力为架构的“三力运动”，破除对老化的恐惧与迷思，以及社会对于年长者的标签，期待长者能开创自我的第三人生。</p>
 <p>责任编辑：陈真</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898380.md#1">嘉市监理站进驻辖区卫生所-高龄换照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898480.md#1">嘉市1959动物保护专线 营造动物友善城市</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899204.md#1">阿里山初春享星河 寻找藏在星空的美丽饰品</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899233.md#1">嘉义分署112年度首次联合法拍会成果亮眼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14016122.md#1">增裕渔业资源 小琉球海域放流鱼苗23500尾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14016115.md#1">布袋数位机会中心 用数位记绿在地文化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14016080.md#1">总统教育奖得主蔡育慈出书邀翁章梁写序</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14016077.md#1">英雄集结之漫威运动会7/1屏东开展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14015973.md#1">守护弱势生命安全 鼎立兴、和嵩公司  携手捐赠安全帽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14016009.md#1">黄敏惠力挺嘉市好店 北上南港世贸展览馆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/3/n13898380.md#1">嘉市监理站进驻辖区卫生所-高龄换照</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/3/n13898480.md#1">嘉市1959动物保护专线 营造动物友善城市</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/4/n13899204.md#1">阿里山初春享星河 寻找藏在星空的美丽饰品</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/4/n13899233.md#1">嘉义分署112年度首次联合法拍会成果亮眼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309123.md#1">排湾族收获祭！三地门部落文化大联欢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309087.md#1">嘉市113年祖父母节庆祝会 31组祖孙家庭同乐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309061.md#1">嘉义市21家特定宠物业 荣获113年度优良业者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308969.md#1">从责任到传承　北港南管的复振之路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308963.md#1">四大舞台百组表演 屏东高校祭万人齐聚屏东公园</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14308953.md#1">迎接七夕情人节  屏东巧克力节甜蜜揭幕</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/7/n11306932.md#1" target="_blank">共产暴政录：共产党主导的三区叛乱</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/10/n14013654.md#1">美国民众目击外星生物报警：100%不是人类</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/9/n14012849.md#1">【未解之谜】灵界网络的浏览器</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/4/n14009632.md#1">伟大的禁书：《安妮日记》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/7/n14011498.md#1">人生是戏 剧本天定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/5/29/n14005832.md#1">万物有灵：大善人郭士俊降龙伏虎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/13/n14015399.md#1">【军事热点】乌军用沉默回应俄军的“胜利”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014605.md#1">【未解之谜】太阳系的行星保卫者</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/14/n14015882.md#1">【晚间新闻】天津两小区发生爆炸 多人伤亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014552.md#1">饶毅曝中共科学界买卖院士头衔黑幕 原文被删</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014485.md#1">中国地方频以罚款创收 专家：这是绝望之举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/11/n14014255.md#1">家长被要求签不信教承诺 律师：这是中共洗脑术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014848.md#1">港星陈子聪严重内出血 下半身瘫痪已逾2个月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/11/n14014245.md#1">在上海活动现场合照 周润发请陈凯歌调位获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014482.md#1">阿诺曾为一电影感到难堪 一周都不想见人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/11/n14014218.md#1">胡歌自曝心理困境：一直没勇气面对母亲去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/13/n14015083.md#1">叶家妤办派对揭第3胎性别 谢谢众人的祝福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/1/n14008101.md#1">燕麦餐强力降血糖 挽救糖尿病重患 但有1大缺点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/6/n14011054.md#1">完全戒盐有3大不良影响 高血压每天应吃多少盐？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014543.md#1">世界最快乐国家的心理学家 阐述生活的意义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014663.md#1">14种有趣技巧 帮你找到下厨乐趣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014391.md#1">只要1%首付款就买房 想要吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307329.md#1">【百年真相】从资本家到右派 李康年真话代价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308353.md#1">【马克时空】乌军以牙还牙 越境攻击俄库尔斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307706.md#1">《死侍与金钢狼》票房破9亿 周末有望达10亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306483.md#1">为何天气炎热时比较不会感觉饿？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307219.md#1">如何去除衣服上的防晒乳污渍？ 这一物有奇效</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/4/n13899355.htm">林经甫医师三力运动 为乐龄勇壮城注入活力</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899355.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/4/n13899355.htm">林经甫医师三力运动 为乐龄勇壮城注入活力</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/4/n13899355.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
